--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
     padding: 0;
     width: 100%;
     height: 100vh;
-    background: #cdcded;
+    background: #b0b0f1;
     
 }
 .caixa1{
